# structure-application

./: .gitignore  CLAIM_BASIS_GUIDE.md  EXCLUSION_MECHANISM.md  MIGRATION_DIMENSIONS_MULTIPLES.md  MIGRATION_SNOWPARK.md  POLICY_EXPIRY_MECHANISM.md  PROGRAM_SPECIFICATION_GUIDE.md  README.md  REORGANISATION_TESTS.md  SNOWFLAKE_INTEGRATION.md  SNOWPARK_ORGANIZATION.md  SNOWPARK_QUICKSTART.md  STREAMLIT_APP.md  TEST_COVERAGE_ANALYSIS.md  app.py  bordereau_exemple.csv  bordereau_multi_year_test.csv  bordereau_with_net_exposure.csv  code_antoine.py  conftest.py  consolidate_programs.py  create_program_config.py  create_simple_programs.py  demo_organized_examples.py  detailed_report.txt  example_claim_basis_usage.py  example_new_program.py  generate_template_data.py  main.py  program_config.xlsx  program_simple_parallel.xlsx  program_simple_parallel_updated.xlsx  program_simple_sequential.xlsx  pyproject.toml  rapport_mapping_dimensions.md  run_app.sh  run_program_analysis.py  snowflake-cli  template_results.csv  test_csv_backend.py  (+8 more)
app/: __init__.py  demo_timeline.py  main.py  test_timeline.py  visuals.py  visuals_graph.py  visuals_sankey.py  visuals_timeline.py
examples/: README.md  program_bordereau_mapping.py  snowflake_integration_example.py
products/: __init__.py  base_products.py
scripts/: analyze_csv_structure.py  correct_snowflake_ddl.sql  create_correct_ddl.py  create_programs_table.py  create_snowflake_tables.py  create_tables_from_csv_structure.py  csv_structure_analysis.json  generated_snowflake_ddl.sql  install_snowflake_cli.py  reset_snowflake_tables.py  setup_snowflake_tables.sql  setup_snowflake_tables_fixed.sql  setup_snowflake_tables_simple.sql  snowflake_maintenance.py  test_csv_aligned_integration.py  test_simple_procedures.py  test_snowpark_bordereau_analysis.py  test_snowpark_integration.py  test_snowpark_simple.py  test_snowpark_write_aviation.py  test_snowpark_write_exclusions.py
snowflake_utils/: __init__.py  __main__.py  cli.py  config.py  list_programs.py  snowpark_config.py  utils.py  utils_snowpark.py
structures/: __init__.py  bordereau_loader.py  calculation_engine.py  constants.py  program_display.py  (+5 more)
(+230 files in other folders)
